--- a/lower thirds/control-panel.html
+++ b/lower thirds/control-panel.html
@@ -625,10 +625,10 @@
 
 			//Read all localstorage data
 			function getLocalStorage() {
-				const a = {};
-				for (const i = 0; i < localStorage.length; i++) {
-					const k = localStorage.key(i);
-					if (k.startsWith("alt2-")) {
+				var a = {};
+				for (var i = 0; i < localStorage.length; i++) {
+					var k = localStorage.key(i);
+					if (k.startsWith("alt-")) {
 						a[k] = localStorage.getItem(k);
 					}
 				}
