Revert change reference

--- a/lower thirds/control-panel.html
+++ b/lower thirds/control-panel.html
@@ -628,7 +628,7 @@
 				var a = {};
 				for (var i = 0; i < localStorage.length; i++) {
 					var k = localStorage.key(i);
-					if (k.startsWith("alt-")) {
+					if (k.startsWith("alt2-")) {
 						a[k] = localStorage.getItem(k);
 					}
 				}
